updated tech stack and placed cv within project

--- a/.netlify/server/.vite/manifest.json
+++ b/.netlify/server/.vite/manifest.json
@@ -53,7 +53,7 @@
       "_ssr.js"
     ],
     "css": [
-      "_app/immutable/assets/_layout.CcUwjrCR.css"
+      "_app/immutable/assets/_layout.CoN9o0A8.css"
     ]
   },
   "src/routes/+page.svelte": {
